ASAP [FE] Application - 4. fix sections gap

--- a/src/widgets/w-chart-fund/w-chart-fund.scss
+++ b/src/widgets/w-chart-fund/w-chart-fund.scss
@@ -1,6 +1,6 @@
 .w-chart-fund {
   padding: var(--spacing-m-1);
-  margin-bottom: var(--spacing-m-1);
+  margin-bottom: var(--spacing-m-2);
   box-shadow: var(--b-shadow-1);
   border: torem(1) solid var(--surfaces-surface-glass-border);
   border-radius: var(--spacing-s);
